Completando Resposive desing (Tablet)

--- a/Abstract/index.html
+++ b/Abstract/index.html
@@ -68,8 +68,8 @@
 		<main>
 			<section class="main-section">
 				<div class="search-container">
-					<div>How can we help?</div>
-					<form autocomplete="off">
+					<div class="search-container_title">How can we help?</div>
+					<form class="search-box" autocomplete="off">
 						<input class="search-input" type="search" placeholder="Search" />
 						<svg
 							width="30px"
@@ -190,7 +190,7 @@
 			</div>
 		</main>
 		<footer>
-			<div class="footer-containers">
+			<div class="footer-container">
 				<div class="footer-columns">
 					<h3>Abstergo</h3>
 					<div class="footer-link_container">
