Repairing imgs paths

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
-		<link rel="icon" href="/Abstract/imgs/icon/logo.png" type="image/x-icon" />
+		<link rel="icon" href="/imgs/icon/logo.png" type="image/x-icon" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<title>Abstergo</title>
 	</head>
@@ -103,7 +103,7 @@
 				<div class="category-list_items">
 					<img
 						class="category-list_img"
-						src="/Abstract/imgs/assets/using_abstract.webp"
+						src="imgs/assets/using_abstract.webp"
 						alt=""
 					/>
 					<div class="category-list_content">
@@ -118,7 +118,7 @@
 				<div class="category-list_items">
 					<img
 						class="category-list_img"
-						src="/Abstract/imgs/assets/manage_account.webp"
+						src="imgs/assets/manage_account.webp"
 						alt=""
 					/>
 					<div class="category-list_content">
@@ -133,7 +133,7 @@
 				<div class="category-list_items">
 					<img
 						class="category-list_img"
-						src="/Abstract/imgs/assets/orgarnization_teams_projects.webp"
+						src="imgs/assets/orgarnization_teams_projects.webp"
 						alt=""
 					/>
 					<div class="category-list_content">
@@ -150,7 +150,7 @@
 				<div class="category-list_items">
 					<img
 						class="category-list_img"
-						src="/Abstract/imgs/assets/manage_billing.webp"
+						src="imgs/assets/manage_billing.webp"
 						alt=""
 					/>
 					<div class="category-list_content">
@@ -164,7 +164,7 @@
 				<div class="category-list_items">
 					<img
 						class="category-list_img"
-						src="/Abstract/imgs/assets/autheticate_to_abstract.webp"
+						src="imgs/assets/autheticate_to_abstract.webp"
 						alt=""
 					/>
 					<div class="category-list_content">
@@ -178,7 +178,7 @@
 				<div class="category-list_items">
 					<img
 						class="category-list_img"
-						src="/Abstract/imgs/assets/abstract_support.webp"
+						src="imgs/assets/abstract_support.webp"
 						alt=""
 					/>
 					<div class="category-list_content">
@@ -231,13 +231,13 @@
 					</div>
 				</div>
 				<div class="footer-column-copyright">
-					<img src="/Abstract/imgs/icon/logo.png" alt="">
+					<img src="/imgs/icon/logo.png" alt="">
 					<p>© Copyright 2024</p>
 					<p>Abstergo Studio Design, inc.</p>
 					<p>All rights reserved</p>
 				</div>
 			</div>
 		</footer>
-		<script src="/Abstract/script.js"></script>
+		<script src="/script.js"></script>
 	</body>
 </html>
