--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
 		<link rel="icon" href="/imgs/icon/logo.png" type="image/x-icon" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+		/>
 		<title>Abstergo</title>
 	</head>
 	<body>
@@ -61,9 +64,80 @@
 				<a href="#"><button class="btn-request">Submit a request</button></a>
 				<a href="#"><button class="btn-sign-in">Sign in</button></a>
 			</div>
-			<div class="navbar-mobile-buttons">
-
+			<div class="navbar-mobile-menu">
+				<div class="mobile-search_button">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						x="0px"
+						y="0px"
+						width="40px"
+						height="40px"
+						viewBox="0,0,255.99704,255.99704"
+						style="fill: #1a1a1a"
+					>
+						<g
+							fill="#ffffff"
+							fill-rule="nonzero"
+							stroke="none"
+							stroke-width="1"
+							stroke-linecap="butt"
+							stroke-linejoin="miter"
+							stroke-miterlimit="10"
+							stroke-dasharray=""
+							stroke-dashoffset="0"
+							font-family="none"
+							font-weight="none"
+							font-size="none"
+							text-anchor="none"
+							style="mix-blend-mode: normal"
+						>
+							<g transform="scale(3.55556,3.55556)">
+								<path
+									d="M31,11c-11.027,0 -20,8.973 -20,20c0,11.027 8.973,20 20,20c3.97417,0 7.67238,-1.17843 10.78906,-3.18555l12.9375,12.9375c1.664,1.664 4.36239,1.664 6.02539,0c1.664,-1.664 1.664,-4.36139 0,-6.02539l-12.9375,-12.9375c2.00712,-3.11668 3.18555,-6.8149 3.18555,-10.78906c0,-11.027 -8.973,-20 -20,-20zM31,19c6.616,0 12,5.384 12,12c0,6.616 -5.384,12 -12,12c-6.616,0 -12,-5.384 -12,-12c0,-6.616 5.384,-12 12,-12z"
+								></path>
+							</g>
+						</g>
+					</svg>
+				</div>
+				<div class="mobile-menu_button">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						x="0px"
+						y="0px"
+						width="30px"
+						height="30px"
+						viewBox="0,0,255.99704,255.99704"
+						style="fill: #1a1a1a"
+					>
+						<g
+							fill="#ffffff"
+							fill-rule="nonzero"
+							stroke="none"
+							stroke-width="1"
+							stroke-linecap="butt"
+							stroke-linejoin="miter"
+							stroke-miterlimit="10"
+							stroke-dasharray=""
+							stroke-dashoffset="0"
+							font-family="none"
+							font-weight="none"
+							font-size="none"
+							text-anchor="none"
+							style="mix-blend-mode: normal"
+						>
+							<g transform="scale(5.12,5.12)">
+								<path
+									d="M5,8c-0.72127,-0.0102 -1.39216,0.36875 -1.75578,0.99175c-0.36361,0.623 -0.36361,1.39351 0,2.01651c0.36361,0.623 1.0345,1.00195 1.75578,0.99175h40c0.72127,0.0102 1.39216,-0.36875 1.75578,-0.99175c0.36361,-0.623 0.36361,-1.39351 0,-2.01651c-0.36361,-0.623 -1.0345,-1.00195 -1.75578,-0.99175zM5,23c-0.72127,-0.0102 -1.39216,0.36875 -1.75578,0.99175c-0.36361,0.623 -0.36361,1.39351 0,2.01651c0.36361,0.623 1.0345,1.00195 1.75578,0.99175h40c0.72127,0.0102 1.39216,-0.36875 1.75578,-0.99175c0.36361,-0.623 0.36361,-1.39351 0,-2.01651c-0.36361,-0.623 -1.0345,-1.00195 -1.75578,-0.99175zM5,38c-0.72127,-0.0102 -1.39216,0.36875 -1.75578,0.99175c-0.36361,0.623 -0.36361,1.39351 0,2.01651c0.36361,0.623 1.0345,1.00195 1.75578,0.99175h40c0.72127,0.0102 1.39216,-0.36875 1.75578,-0.99175c0.36361,-0.623 0.36361,-1.39351 0,-2.01651c-0.36361,-0.623 -1.0345,-1.00195 -1.75578,-0.99175z"
+								></path>
+							</g>
+						</g>
+					</svg>
+				</div>
 			</div>
+			<nav class="mobile-nav_menu">
+				<a href="#">Submit a request</a>
+				<a href="#">Sign in</a>
+			</nav>
 		</header>
 		<main>
 			<section class="main-section">
@@ -182,7 +256,7 @@
 						alt=""
 					/>
 					<div class="category-list_content">
-						<h4 class="category-list_title">Abstract support</h4>
+						<h4 class="category-list_title">Abstergo support</h4>
 						<p class="category-list_description">Get in touch with a human.</p>
 						<a class="category-list_link" href="#">Learn More →</a>
 					</div>
@@ -231,7 +305,7 @@
 					</div>
 				</div>
 				<div class="footer-column-copyright">
-					<img src="/imgs/icon/logo.png" alt="">
+					<img src="/imgs/icon/logo.png" alt="" />
 					<p>© Copyright 2024</p>
 					<p>Abstergo Studio Design, inc.</p>
 					<p>All rights reserved</p>
