Cambiar nombres de pagina web

--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
 						alt=""
 					/>
 					<div class="category-list_content">
-						<h4 class="category-list_title">Using Abstract</h4>
+						<h4 class="category-list_title">Using Abstergo</h4>
 						<p class="category-list_description">
-							Abstract lets you manage, version, and document your designs in one
+							Abstergo lets you manage, version, and document your designs in one
 							place.
 						</p>
 						<a class="category-list_link" href="#">Learn More →</a>
@@ -215,7 +215,7 @@
 							Manage organizations, teams, and projects
 						</h4>
 						<p class="category-list_description">
-							Use Abstract organizations, teams, and projects to organize your people
+							Use Abstergo organizations, teams, and projects to organize your people
 							and your work.
 						</p>
 						<a class="category-list_link" href="#">Learn More →</a>
@@ -242,7 +242,7 @@
 						alt=""
 					/>
 					<div class="category-list_content">
-						<h4 class="category-list_title">Authenticate to Abstract</h4>
+						<h4 class="category-list_title">Authenticate to Abstergo</h4>
 						<p class="category-list_description">
 							Set up and configure SSO, SCIM, and Just-in-Time provisioning.
 						</p>
