Avance de botón menu responsive

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 				</div>
 				<div class="mobile-menu_button">
 					<svg
+						id="hamburger"
 						xmlns="http://www.w3.org/2000/svg"
 						x="0px"
 						y="0px"
@@ -134,10 +135,10 @@
 					</svg>
 				</div>
 			</div>
-			<nav class="mobile-nav_menu">
+			<div class="mobile-nav_dropdown_menu" id="dropdown-menu">
 				<a href="#">Submit a request</a>
 				<a href="#">Sign in</a>
-			</nav>
+			</div>
 		</header>
 		<main>
 			<section class="main-section">
