Completando version responsive (mobile)

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					</svg>
 					Abstergo
 				</a>
-				<div>|</div>
+				<div><span class="logo-bar_div"></span></div>
 				<a class="nav-help" href="#">Help Center</a>
 			</div>
 			<div class="navbar-buttons">
