Mejorando responsive e implementando botón de menu desplegable (aun no funcional).

--- a/index.html
+++ b/index.html
@@ -55,13 +55,16 @@
 							</g>
 						</g>
 					</svg>
-					Abstergo
+			        <div class="logo-name">Abstergo</div>
 				</a>
 				<div><span class="logo-bar_div"></span></div>
 				<a class="nav-help" href="#">Help Center</a>
 			</div>
 			<div class="navbar-buttons">
 				<a href="#"><button class="btn-request">Submit a request</button></a>
+				<div class="nav-separation">
+					<span class="separation"></span>
+				</div>
 				<a href="#"><button class="btn-sign-in">Sign in</button></a>
 			</div>
 			<div class="navbar-mobile-menu">
@@ -99,45 +102,11 @@
 						</g>
 					</svg>
 				</div>
-				<div class="mobile-menu_button">
-					<svg
-						id="hamburger"
-						xmlns="http://www.w3.org/2000/svg"
-						x="0px"
-						y="0px"
-						width="30px"
-						height="30px"
-						viewBox="0,0,255.99704,255.99704"
-						style="fill: #1a1a1a"
-					>
-						<g
-							fill="#ffffff"
-							fill-rule="nonzero"
-							stroke="none"
-							stroke-width="1"
-							stroke-linecap="butt"
-							stroke-linejoin="miter"
-							stroke-miterlimit="10"
-							stroke-dasharray=""
-							stroke-dashoffset="0"
-							font-family="none"
-							font-weight="none"
-							font-size="none"
-							text-anchor="none"
-							style="mix-blend-mode: normal"
-						>
-							<g transform="scale(5.12,5.12)">
-								<path
-									d="M5,8c-0.72127,-0.0102 -1.39216,0.36875 -1.75578,0.99175c-0.36361,0.623 -0.36361,1.39351 0,2.01651c0.36361,0.623 1.0345,1.00195 1.75578,0.99175h40c0.72127,0.0102 1.39216,-0.36875 1.75578,-0.99175c0.36361,-0.623 0.36361,-1.39351 0,-2.01651c-0.36361,-0.623 -1.0345,-1.00195 -1.75578,-0.99175zM5,23c-0.72127,-0.0102 -1.39216,0.36875 -1.75578,0.99175c-0.36361,0.623 -0.36361,1.39351 0,2.01651c0.36361,0.623 1.0345,1.00195 1.75578,0.99175h40c0.72127,0.0102 1.39216,-0.36875 1.75578,-0.99175c0.36361,-0.623 0.36361,-1.39351 0,-2.01651c-0.36361,-0.623 -1.0345,-1.00195 -1.75578,-0.99175zM5,38c-0.72127,-0.0102 -1.39216,0.36875 -1.75578,0.99175c-0.36361,0.623 -0.36361,1.39351 0,2.01651c0.36361,0.623 1.0345,1.00195 1.75578,0.99175h40c0.72127,0.0102 1.39216,-0.36875 1.75578,-0.99175c0.36361,-0.623 0.36361,-1.39351 0,-2.01651c-0.36361,-0.623 -1.0345,-1.00195 -1.75578,-0.99175z"
-								></path>
-							</g>
-						</g>
-					</svg>
+				<div class="mobile-hamburger-menu">
+					<span class="bar"></span>
+					<span class="bar"></span>
+					<span class="bar"></span>
 				</div>
-			</div>
-			<div class="mobile-nav_dropdown_menu" id="dropdown-menu">
-				<a href="#">Submit a request</a>
-				<a href="#">Sign in</a>
 			</div>
 		</header>
 		<main>
