--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<title>Abstergo</title>
 	</head>
 	<body>
-		<header>
+		<header><!-- Header -->
 			<div class="logo-wrapper">
 				<a class="nav-logo" href="#">
 					<svg
