Cambiando formato de archivos de los iconos de logo y favicon, también la ruta del archivo script a una ruta relativa para ver si ahora si puede encontrarla en GitHub pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
-		<link rel="icon" href="/imgs/icon/logo.png" type="image/x-icon" />
+		<link rel="icon" href="/imgs/icon/favicon.webp" type="image/x-icon" />
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -275,13 +275,13 @@
 					</div>
 				</div>
 				<div class="footer-column-copyright">
-					<img src="/imgs/icon/logo.png" alt="" />
+					<img src="/imgs/icon/logo.webp" alt="" />
 					<p>© Copyright 2024</p>
 					<p>Abstergo Studio Design, inc.</p>
 					<p>All rights reserved</p>
 				</div>
 			</div>
 		</footer>
-		<script src="/script.js"></script>
+		<script src="script.js"></script>
 	</body>
 </html>
